--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,9 +25,8 @@ main{
 section#cards{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 5rem;
-    
-    
+    flex-wrap: wrap;
+    margin-top: 5rem;    
 }
 
 section#cards div.card{
@@ -36,6 +35,7 @@ section#cards div.card{
     padding: 1.5rem;
     border-radius: 10px;
     background-color: rgb(238, 248, 248);
+    margin-top: 3rem;
 }
 
 section#cards div.card img{
@@ -48,4 +48,54 @@ section#cards div.card h2{
 
 section#cards div.card p.descricao{
     margin-bottom: 1rem;
+}
+
+section#cadastro{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 5rem;
+}
+
+section#cadastro h2{
+    width: 100%;
+    text-align: center;
+    padding-bottom: 5rem;
+}
+
+section#cadastro form{
+    width: 50%;
+}
+
+section#cadastro form input{
+    width: 100%;
+    padding: .5rem;
+    font-size: 1rem;
+    outline: none;
+    border: solid 2px rgb(197, 197, 197);
+    margin: 0 1rem 1rem 1rem;
+}
+
+section#cadastro form label{
+    margin: 1rem;
+    color: rgb(148, 148, 148);
+}
+
+section#cadastro form button{
+    padding: .6rem;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    font-size: 1rem;
+    background-color: #fff;
+    border: solid 1px red;
+    color: red;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
+section#cadastro form button:hover{
+    background-color: red;
+    color: #fff;
 }
