--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Pokedex</title>
 </head>
 <body>
 
@@ -25,9 +25,56 @@
                     <h2> <%= pokemon.nome %> </h2>
                     <p class="descricao"> <%= pokemon.descricao %> </p>
                     <p>Tipo <%= pokemon.tipo %> </p>
+                    <a href="/detalhes/<%= pokemon.id %>">Editar</a>
                 </div>        
             <% }) %>
             
+        </section>
+
+        <section id="cadastro">
+
+            <% if (pokemon == undefined) { %>
+            <h2> Cadastre um novo Pokemon!</h2>
+
+            <form action="/add" method="post">
+
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome">
+
+                <label for="descricao">Descrição:</label>
+                <input type="text" id="descricao" name="descricao">
+
+                <label for="tipo">Tipo:</label>
+                <input type="text" id="tipo" name="tipo">
+
+                <label for="imagem">Link da imagem:</label>
+                <input type="text" id="imagem" name="imagem">
+
+                <button id="btnCadastrar" type="submit">Cadastrar</button>
+
+            </form>
+
+            <% } else { %>
+
+                <h2>Atualize seu Pokemon!</h2>
+            
+            <form action="/update/<%= pokemon.id %>" method="post">
+
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" value="<%= pokemon.nome %>">
+
+                <label for="descricao">Descrição:</label>
+                <input type="text" id="descricao" name="descricao" value="<%= pokemon.descricao %>">
+
+                <label for="tipo">Tipo:</label>
+                <input type="text" id="tipo" name="tipo" value="<%= pokemon.tipo %>">
+
+                <label for="imagem">Link da imagem:</label>
+                <input type="text" id="imagem" name="imagem" value="<%= pokemon.imagem %>">
+
+                <button id="btnAtualizar" type="submit">Atualizar</button>
+            <% } %>
+            </form>
         </section>
 
     </main>
