--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,14 +35,19 @@ section#cards div.card{
     padding: 1.5rem;
     border-radius: 10px;
     background-color: rgb(238, 248, 248);
-    margin-top: 3rem;
+    margin: 3rem 0 5rem 0;
+}
+
+section#cards h2{
+    width: 100%;
+    text-align: center;
 }
 
 section#cards div.card img{
     width: 100%;
 }
 
-section#cards div.card h2{
+section#cards div.card h3{
     margin-bottom: 1rem;
 }
 
@@ -50,21 +55,46 @@ section#cards div.card p.descricao{
     margin-bottom: 1rem;
 }
 
-section#cadastro{
+section#cards div.card a{
+    padding: .6rem;
+    width: 20%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    margin: 0 auto;
+    font-size: 1rem;
+    background-color: #fff;
+    border: solid 1px red;
+    color: red;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+    text-decoration: none;
+    margin-top: 2rem;
+}
+
+section#cards div.card a:hover{
+    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    color: #fff;
+}
+
+section#cadastro{
+    display: flex;
+    justify-content: center;    
     padding: 5rem;
+}
+
+section#cadastro img{
+    width: 100%;
 }
 
 section#cadastro h2{
     width: 100%;
     text-align: center;
     padding-bottom: 5rem;
+    color: rgb(109, 109, 109);;
 }
 
 section#cadastro form{
-    width: 50%;
+    width: 100%;
 }
 
 section#cadastro form input{
@@ -96,6 +126,6 @@ section#cadastro form button{
 }
 
 section#cadastro form button:hover{
-    background-color: red;
+    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
     color: #fff;
 }
