--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,12 +17,66 @@
 
     <main>
 
+        <section id="cadastro">
+
+            <img src="/media/pokedex.png" alt="">
+
+            <div>
+                <% if (pokemon == undefined) { %>
+                    <h2> Cadastre um novo Pokemon!</h2>
+        
+                    <form action="/create" method="post">
+        
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" name="nome">
+        
+                        <label for="descricao">Descrição:</label>
+                        <input type="text" id="descricao" name="descricao">
+        
+                        <label for="tipo">Tipo:</label>
+                        <input type="text" id="tipo" name="tipo">
+        
+                        <label for="imagem">Link da imagem:</label>
+                        <input type="text" id="imagem" name="imagem">
+        
+                        <button id="btnCadastrar" type="submit">Cadastrar</button>
+        
+                    </form>
+        
+                    <% } else { %>
+        
+                        <h2>Atualize seu Pokemon!</h2>
+                    
+                    <form action="/update/<%= pokemon.id %>" method="post">
+        
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" name="nome" value="<%= pokemon.nome %>">
+        
+                        <label for="descricao">Descrição:</label>
+                        <input type="text" id="descricao" name="descricao" value="<%= pokemon.descricao %>">
+        
+                        <label for="tipo">Tipo:</label>
+                        <input type="text" id="tipo" name="tipo" value="<%= pokemon.tipo %>">
+        
+                        <label for="imagem">Link da imagem:</label>
+                        <input type="text" id="imagem" name="imagem" value="<%= pokemon.imagem %>">
+        
+                        <button id="btnAtualizar" type="submit">Atualizar</button>
+                    <% } %>
+                    </form>
+            </div>
+
+            
+        </section>
+
         <section id="cards">
+
+            <h2>Lista de pokemons</h2>
 
             <% pokedex.forEach((pokemon) => { %>
                 <div class="card">
                     <img src="<%= pokemon.imagem %>" alt="">
-                    <h2> <%= pokemon.nome %> </h2>
+                    <h3> <%= pokemon.nome %> </h3>
                     <p class="descricao"> <%= pokemon.descricao %> </p>
                     <p>Tipo <%= pokemon.tipo %> </p>
                     <a href="/detalhes/<%= pokemon.id %>">Editar</a>
@@ -31,51 +85,7 @@
             
         </section>
 
-        <section id="cadastro">
-
-            <% if (pokemon == undefined) { %>
-            <h2> Cadastre um novo Pokemon!</h2>
-
-            <form action="/add" method="post">
-
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome">
-
-                <label for="descricao">Descrição:</label>
-                <input type="text" id="descricao" name="descricao">
-
-                <label for="tipo">Tipo:</label>
-                <input type="text" id="tipo" name="tipo">
-
-                <label for="imagem">Link da imagem:</label>
-                <input type="text" id="imagem" name="imagem">
-
-                <button id="btnCadastrar" type="submit">Cadastrar</button>
-
-            </form>
-
-            <% } else { %>
-
-                <h2>Atualize seu Pokemon!</h2>
-            
-            <form action="/update/<%= pokemon.id %>" method="post">
-
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" value="<%= pokemon.nome %>">
-
-                <label for="descricao">Descrição:</label>
-                <input type="text" id="descricao" name="descricao" value="<%= pokemon.descricao %>">
-
-                <label for="tipo">Tipo:</label>
-                <input type="text" id="tipo" name="tipo" value="<%= pokemon.tipo %>">
-
-                <label for="imagem">Link da imagem:</label>
-                <input type="text" id="imagem" name="imagem" value="<%= pokemon.imagem %>">
-
-                <button id="btnAtualizar" type="submit">Atualizar</button>
-            <% } %>
-            </form>
-        </section>
+        
 
     </main>
 
