--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ nav ul{
     display: flex;
     align-items: center;
     list-style: none;
+    justify-content: space-evenly;
 }
 
 nav ul li{
@@ -113,12 +114,32 @@ section#cards div.card a#apagar{
     margin-top: 1rem;
 }
 
+div.btn a#detalhes{
+    padding: .6rem;
+    display: flex;
+    justify-content: center;
+    margin: 2rem auto 3rem;
+    font-size: 1rem;
+    background-color: #fff;
+    border: solid 1px red;
+    color: red;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+    text-decoration: none;
+    width: 6rem;
+}
+
 section#cards div.card a#editar:hover{
     background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
     color: #fff;
 }
 
 section#cards div.card a#apagar:hover{
+    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    color: #fff;
+}
+
+main a#detalhes:hover{
     background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
     color: #fff;
 }
@@ -160,7 +181,7 @@ section#cadastro form label{
 
 section#cadastro form button{
     padding: .6rem;
-    width: 20%;
+    width: 6rem;
     display: flex;
     justify-content: center;
     margin: 0 auto;
