--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,53 @@ nav ul li a{
     font-size: 1.3rem;
 }
 
+.checkbtn {
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+/* @media (max-width: 952px){
+    nav ul li a{
+        font-size: 16px;
+    }
+} */
+
+@media (max-width: 858px){
+    .checkbtn{
+       display: block; 
+    }    
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+        top: 80px;
+        left: -100%;
+        text-align: center;         
+        display: block;         
+        transition: all .5s;      
+    }
+
+    nav ul li{
+        margin: 50px;
+        line-height: 30px;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+
+}
+
 header img{
     margin-top: 4rem;
     width: 100%;
