--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Pokédex</title>
 </head>
 <body>
 
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
 
         <ul>
             <li><img src="/media/pokebola-go.png" alt="pokebola"></li>            
@@ -35,7 +40,7 @@
                 <div class="card">
                     <img src="<%= pokemon.imagem %>" alt="">
                     <h3> <%= pokemon.nome %> </h3>
-                                        
+                    <p>Tipo <%= pokemon.tipo %> </p>
                 </div>        
             <% }) %>
             
