--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -27,7 +27,19 @@
     </nav> 
 
     <header>
-        <img src="/media/banner.png" alt="banner">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="/media/banner (0).jpg" alt=""></div>
+              <div class="swiper-slide"><img src="/media/banner (1).jpg" alt=""></div>
+              <div class="swiper-slide"><img src="/media/banner (2).jpg" alt=""></div>
+              <div class="swiper-slide"><img src="/media/banner (3).jpg" alt=""></div>
+            </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+
+        </div>
     </header>
 
     <main>
@@ -54,9 +66,13 @@
     </main>
 
     <footer>
-        <p>Todos os direitos reservados © </p>
-        <p>Dados retirados de <a target="_blank" href="https://www.pokemon.com/br/pokedex/">Pokédex</a></p>
+        <p>Todos os direitos reservados para <a target="_blank" href="https://www.instagram.com/mthiagoalves/">Thiago Alves</a> e <a target="_blank" href="https://www.instagram.com/diegofreitas50/"> Diego Freitas </a> ©</p>
+            <p>Inspirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
+        </footer>
     </footer>
+
+    <script src="/js/script.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 </body>
 </html>
