--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,17 +17,29 @@
         </label>
 
         <ul>
-            <li><img src="/media/pokebola-go.png" alt="pokebola"></li>            
+            <li id="pokebola1"><img src="/media/pokebola-go.png" alt="pokebola"></li>            
             <li><a href="/cadastro">Cadastro</a></li>
             <li><a href="/"><h1>Pokédex</h1></a></li>
             <li><a href="/detalhes">Pokemons</a></li>
-            <li><img src="/media/pokebola-go.png" alt="pokebola"></li>
+            <li id="pokebola2"><img src="/media/pokebola-go.png" alt="pokebola"></li>
         </ul>        
 
     </nav>
 
     <header>
-        <img src="/media/banner.png" alt="banner">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="/media/banner (0).jpg" alt=""></div>
+                <div class="swiper-slide"><img src="/media/banner (1).jpg" alt=""></div>
+                <div class="swiper-slide"><img src="/media/banner (2).jpg" alt=""></div>
+                <div class="swiper-slide"><img src="/media/banner (3).jpg" alt=""></div>
+              </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+
+        </div>
     </header>
 
     <main>
@@ -55,9 +67,11 @@
     </main>
 
     <footer>
-        <p>Todos os direitos reservados © </p>
-        <p>Dados retirados de <a target="_blank" href="https://www.pokemon.com/br/pokedex/">Pokédex</a></p>
+        <p>Todos os direitos reservados para <a target="_blank" href="https://www.instagram.com/mthiagoalves/">Thiago Alves</a> e <a target="_blank" href="https://www.instagram.com/diegofreitas50/"> Diego Freitas </a> ©</p>
+        <p>Inspirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
     </footer>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     
 
 </body>
