--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,8 @@ nav ul{
 
 nav ul li{
     padding: 0.6rem;
+    display: flex;
+    align-items: center;
 }
 
 nav img{
@@ -56,13 +58,7 @@ nav ul li a{
     display: none;
 }
 
-/* @media (max-width: 952px){
-    nav ul li a{
-        font-size: 16px;
-    }
-} */
-
-@media (max-width: 858px){
+@media (max-width: 500px){
     .checkbtn{
        display: block; 
     }    
@@ -76,8 +72,7 @@ nav ul li a{
         text-align: center;         
         display: block;         
         transition: all .5s;      
-    }
-
+    }    
     nav ul li{
         margin: 50px;
         line-height: 30px;
@@ -85,8 +80,6 @@ nav ul li a{
     #check:checked ~ ul{
         left: 0;
     }
-
-
 }
 
 header img{
@@ -106,12 +99,13 @@ section#cards{
 }
 
 section#cards div.card{
-    width: 20rem;
+    width: 10rem;
     box-shadow: 10px 5px 5px #00000020;
     padding: 1.5rem;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: rgb(238, 248, 248);
     margin: 3rem 0 5rem 0;
+    position: relative;
 }
 
 section#cards h2{
@@ -127,68 +121,115 @@ section#cards div.card h3{
     margin-bottom: 1rem;
 }
 
+section#cards div.card:after,section#cards div.card:before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: transform .6s ease-in-out;
+}
+
+section#cards div.card:before{
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+   transform: scaleY(0)
+}
+
+section#cards div.card:after{
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    transform: scaleX(0);
+}
+
+section#cards div.card:hover:before{
+    transform: scaleY(1);
+}
+
+section#cards div.card:hover:after{
+    transform: scaleY(1);
+}
+
 section#cards div.card p.descricao{
     margin-bottom: 1rem;
 }
 
 section#cards div.card a#editar{
     padding: .6rem;
+    width: 25%;
     display: flex;
     justify-content: center;
     margin: 0 auto;
     font-size: 1rem;
     background-color: #fff;
-    border: solid 1px red;
-    color: red;
+    border: solid 1px rgb(15, 155, 22);
+    color: rgb(15, 155, 22);
     cursor: pointer;
-    transition: all .3s ease-in-out;
+    transition: all .6s ease-in-out;
     text-decoration: none;
     margin-top: 2rem;
+    z-index: 9999;
 }
 
 section#cards div.card a#apagar{
     padding: .6rem;
+    width: 25%;
     display: flex;
     justify-content: center;
     margin: 0 auto;
     font-size: 1rem;
     background-color: #fff;
-    border: solid 1px red;
-    color: red;
+    border: solid 1px rgb(194, 83, 83);
+    color: rgb(194, 83, 83);
     cursor: pointer;
-    transition: all .3s ease-in-out;
+    transition: all .6s ease-in-out;
     text-decoration: none;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    z-index: 9999;
 }
 
 div.btn a#detalhes{
     padding: .6rem;
     display: flex;
     justify-content: center;
-    margin: 2rem auto 3rem;
+    margin: 0 auto;
+    /* margin: 2rem auto 3rem; */
     font-size: 1rem;
     background-color: #fff;
-    border: solid 1px red;
-    color: red;
+    border: solid 1px rgb(15, 155, 22);;
+    color: rgb(15, 155, 22);;
     cursor: pointer;
-    transition: all .3s ease-in-out;
+    transition: all .6s ease-in-out;
     text-decoration: none;
     width: 6rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 section#cards div.card a#editar:hover{
-    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    /* background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% ); */
+    background-color: rgb(15, 155, 22);
     color: #fff;
 }
 
 section#cards div.card a#apagar:hover{
-    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    /* background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% ); */
+    
     color: #fff;
 }
 
 main a#detalhes:hover{
-    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    /* background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% ); */
+    background-color: rgb(15, 155, 22);
     color: #fff;
+}
+
+
+section#cards div.card div#btn{
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
 section#cadastro{
@@ -199,13 +240,14 @@ section#cadastro{
 
 section#cadastro img{
     width: 100%;
+    right: 100%;
 }
 
 section#cadastro h2{
     width: 100%;
     text-align: center;
     padding-bottom: 5rem;
-    color: rgb(109, 109, 109);;
+    color: rgb(85, 85, 85);
 }
 
 section#cadastro form{
@@ -217,7 +259,7 @@ section#cadastro form input{
     padding: .5rem;
     font-size: 1rem;
     outline: none;
-    border: solid 2px rgb(197, 197, 197);
+    border: solid 2px #ccc;
     margin: 0 1rem 1rem 1rem;
 }
 
@@ -228,26 +270,27 @@ section#cadastro form label{
 
 section#cadastro form button{
     padding: .6rem;
-    width: 6rem;
+    width: auto;
     display: flex;
     justify-content: center;
     margin: 0 auto;
     font-size: 1rem;
     background-color: #fff;
-    border: solid 1px red;
-    color: red;
+    border: solid 1px (194, 83, 83);
+    color: (194, 83, 83);
     cursor: pointer;
-    transition: all .3s ease-in-out;
+    transition: all .6s ease-in-out;
 }
 
 section#cadastro form button:hover{
-    background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
+    /* background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% ); */
+    background-color: rgb(194, 83, 83);
     color: #fff;
 }
 
 footer{
     background-image: linear-gradient( 89.8deg,  rgba(222,74,74,1) 4.7%, rgba(30,29,29,1) 120.3% );
-    padding: 3rem;
+    padding: 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -266,3 +309,26 @@ footer p a{
     color: #fff;
     font-weight: 600;
 }
+
+.swiper-slide {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
