--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,78 +1,89 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Pokédex</title>
+    <title>Pokedex</title>
 </head>
-<body>
 
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
+    <body>  
 
-        <ul>
-            <li id="pokebola1"><img src="/media/pokebola-go.png" alt="pokebola"></li>            
-            <li><a href="/cadastro">Cadastro</a></li>
-            <li><a href="/"><h1>Pokédex</h1></a></li>
-            <li><a href="/detalhes">Pokemons</a></li>
-            <li id="pokebola2"><img src="/media/pokebola-go.png" alt="pokebola"></li>
-        </ul>        
+        <nav>
 
-    </nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
 
-    <header>
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="/media/banner (0).jpg" alt=""></div>
-                <div class="swiper-slide"><img src="/media/banner (1).jpg" alt=""></div>
-                <div class="swiper-slide"><img src="/media/banner (2).jpg" alt=""></div>
-                <div class="swiper-slide"><img src="/media/banner (3).jpg" alt=""></div>
-              </div>
+            <ul>
 
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+                <li><img src="/img/pokebola.png" alt="pokebola"></li>
+                <li> <a href="/cadastro"> Cadastro </a></li>
+                <li><h1> <a href="/">  Pokedex </a></h1></li>
+                <li> <a href="/detalhes"> Pokemons </a></li>
+                <li><img src="/img/pokebola.png" alt="pokebola"></li>
 
-        </div>
-    </header>
+            </ul>
 
-    <main>
+        </nav>
 
-        <section id="cards">
+        <header>
 
-            <h2>Lista de pokemons</h2>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="/img/banner.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="/img/banner (1).jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="/img/banner (3).jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="/img/banner (4).jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="/img/banner (5).jpg" alt=""></div>
+                </div>
 
-            <% pokedex.forEach((pokemon) => { %>
-                <div class="card">
-                    <img src="<%= pokemon.imagem %>" alt="">
-                    <h3> <%= pokemon.nome %> </h3>
-                    <p>Tipo <%= pokemon.tipo %> </p>
-                </div>        
-            <% }) %>
-            
-        </section>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
 
-        <div class="btn">
+            </div>
 
-            <a id="detalhes" href="/detalhes">Detalhes</a>
+        </header>
 
-        </div>        
+        <main>
 
-    </main>
+            <section id="cards">
 
-    <footer>
-        <p>Todos os direitos reservados para <a target="_blank" href="https://www.instagram.com/mthiagoalves/">Thiago Alves</a> e <a target="_blank" href="https://www.instagram.com/diegofreitas50/"> Diego Freitas </a> ©</p>
-        <p>Inspirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
-    </footer>
+                <h2>Lista dos Pokemons</h2>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                <% pokedex.forEach((pokemon) => { %>
+
+                    <div class="container">
+                        <div class="product">
+                            <div class="product-card">
+                                <h2 class="name"><%= pokemon.nome %></h2>
+                                <span class="price"> Id: <%= pokemon.id %></span>
+                                <a href="/detalhes" class="popup-btn">Detalhes</a>
+                                <img src="<%= pokemon.imagem %>" alt="" class="product-img">
+                            </div>
+                        </div>
+                    </div>
     
+                <% }); %>
+    
+            </section>
 
-</body>
+        </main>
+
+        <footer>
+            <p>Todos os direitos reservados para <a target="_blank" href="https://www.instagram.com/mthiagoalves/">Thiago Alves</a> e <a target="_blank" href="https://www.instagram.com/diegofreitas50/"> Diego Freitas </a> ©</p>
+            <p>Inpirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
+        </footer>
+
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <script src="scriptSlide.js"></script>
+        <script src="script.js"></script>
+
+    </body>
+
 </html>
