--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -99,7 +99,7 @@
 
         <footer>
             <p>Todos os direitos reservados para <a target="_blank" href=" https://www.instagram.com/mthiagoalves/ " >Thiago Alves </a> e <a target="_blank" href=" https://www.instagram.com/diegofreitas50/ " > Diego Freitas </a> ©</p>
-            <p>Inpirado em <a target="_blank" href=" https://www.pokemon.com/br/" >Pokedex</a></p>
+            <p>Inspirado em <a target="_blank" href=" https://www.pokemon.com/br/" >Pokedex</a></p>
         </footer>
 
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
