--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,8 +62,8 @@
                         <div class="product">
                             <div class="product-card">
                                 <h2 class="name"><%= pokemon.nome %></h2>
-                                <span class="price"> Id: <%= pokemon.id %></span>
-                                <a href="/detalhes" class="popup-btn">Detalhes</a>
+                                <span class="price"> Tipo: <%= pokemon.tipo %></span>
+                                <!-- <a href="/detalhes" class="popup-btn">Detalhes</a> -->
                                 <img src="<%= pokemon.imagem %>" alt="" class="product-img">
                             </div>
                         </div>
@@ -77,7 +77,7 @@
 
         <footer>
             <p>Todos os direitos reservados para <a target="_blank" href="https://www.instagram.com/mthiagoalves/">Thiago Alves</a> e <a target="_blank" href="https://www.instagram.com/diegofreitas50/"> Diego Freitas </a> ©</p>
-            <p>Inpirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
+            <p>Inspirado em <a target="_blank" href="https://www.pokemon.com/br/">Pokedex</a></p>
         </footer>
 
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
