--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Pokedex</title>
@@ -81,8 +81,8 @@
         </footer>
 
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-        <script src="scriptSlide.js"></script>
-        <script src="script.js"></script>
+        <script src="./scriptSlide.js"></script>
+        <script src="./script.js"></script>
 
     </body>
 
