--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,7 @@ html{
 }
 
 body{
-    background-color: #151515;
-   
+    background-color: #151515;    
 }
 
 nav{
@@ -101,10 +100,6 @@ header img{
     }
 }
 
-/* main{
-    margin: 0 10rem 0 10rem;
-} */
-
 section#cards{
     display: flex;
     justify-content: space-evenly;
@@ -134,10 +129,10 @@ section#cards h2{
     position: relative;
     display: flex;
     align-items: center;
-  
+    justify-content: center;
 }
 
-.product .product-card{
+.pokemon .pokemon-card{
     display: flex;
     flex-direction: row;
     z-index: 1;
@@ -149,7 +144,7 @@ section#cards h2{
     border-radius: 10px;
 }
 
-.product .product-card:before{
+.pokemon .pokemon-card:before{
     content: '';
     background: rgba(255, 255, 255, 0.1);
     position: absolute;
@@ -162,7 +157,7 @@ section#cards h2{
     border-bottom-left-radius: 10px;
 }
 
-.product .product-card .product-img{
+.pokemon .pokemon-card .pokemon-img{
     z-index: 1;
     position: absolute;
     max-width: 350px;
@@ -171,7 +166,7 @@ section#cards h2{
     transform: translate(-50%, -50%);
 }
 
-.product .product-card .name{
+.pokemon .pokemon-card .name{
     z-index: 2;
     color: #444;
     text-shadow: 10px 2px 5px rgb(0, 0, 0);
@@ -182,7 +177,7 @@ section#cards h2{
     letter-spacing: 1px;
 }
 
-.product .product-card .price{
+.pokemon .pokemon-card .tipo{
     z-index: 2;
     color: #fff;
     position: absolute;
@@ -193,7 +188,7 @@ section#cards h2{
     font-weight: 300;
 }
 
-.product .product-card .popup-btn{
+.pokemon .pokemon-card .popup-btn{
     z-index: 2;
     color: #fff;
     background: #555;
@@ -213,7 +208,7 @@ section#cards h2{
 
 /* Estilização dos detalhes */
 
-.product .popup-view{
+.pokemon .popup-view{
     z-index: 2;
     background: rgba(255, 255, 255, 0.5);
     position: fixed;
@@ -229,12 +224,12 @@ section#cards h2{
     transition: 0.7s;
 }
 
-.product .popup-view.active{
+.pokemon .popup-view.active{
     opacity: 1;
     visibility: visible;
 }
 
-.product .popup-card{
+.pokemon .popup-card{
     position: relative;
     display: flex;
     width: 800px;
@@ -243,7 +238,7 @@ section#cards h2{
 
 }
 
-.product .popup-card .product-img{
+.pokemon .popup-card .pokemon-img{
     z-index: 2;
     background: #1d212b;
     position: relative;
@@ -257,14 +252,14 @@ section#cards h2{
     border-bottom-left-radius: 10px;
 }
 
-.product .popup-card .product-img img{
+.pokemon .popup-card .pokemon-img img{
     z-index: 2;
     position: relative;
     width: 450px;
     left: -50px;
 }
 
-.product .popup-card .info{
+.pokemon .popup-card .info{
     z-index: 2;
     background: #fff;
     display: flex;
@@ -275,7 +270,7 @@ section#cards h2{
     border-radius: 10px; 
 }
 
-.product .popup-card .close-btn{
+.pokemon .popup-card .close-btn{
     z-index: 3;
     position:absolute;
     right: 0;
@@ -284,7 +279,7 @@ section#cards h2{
     cursor: pointer;
 }
 
-.product .popup-card .info #name-info{
+.pokemon .popup-card .info #name-info{
     color: #151515;
     font-size: 40px;
     line-height: 20px;
@@ -292,26 +287,26 @@ section#cards h2{
     padding-bottom: 1rem;
 }
 
-.product .popup-card .info h2 span{
+.pokemon .popup-card .info h2 span{
     color: #151515;
     font-size: 15px;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
-.product .popup-card .info p{
+.pokemon .popup-card .info p{
     font-size: 15px;
     margin: 10px;
 }
 
-.product .popup-card .info .price{
+.pokemon .popup-card .info .tipo{
     font-size: 35px;
     font-weight: 300;
     margin: 10px;
 
 }
 
-.product .popup-card .info .add-cart-btn{
+.pokemon .popup-card .info .add-cart-btn{
     color: #fff;
     background: #009dd2;
     font-size: 16px;
@@ -324,7 +319,7 @@ section#cards h2{
     border-radius: 20px;
 }
 
-.product .popup-card .info .add-wish{
+.pokemon .popup-card .info .add-wish{
     color: #009dd2;
     font-size: 14px;
     text-align: center;
@@ -335,13 +330,13 @@ section#cards h2{
 /* Responsividade do card de detalhes*/
 
 @media (max-width: 900px){
-    .product .popup-card{
+    .pokemon .popup-card{
         flex-direction: column;
         width: 550px;
         height: auto;
     }
 
-    .product-card .popup-card .product-img{
+    .pokemon-card .popup-card .pokemon-img{
         z-index: 3;
         width: 100%;
         height: 200px;
@@ -352,12 +347,12 @@ section#cards h2{
 
     }
 
-    .product .popup-card .product-img img{
+    .pokemon .popup-card .pokemon-img img{
         left: initial;
         max-width: 100%;
     }
 
-    .product .popup-card .info {
+    .pokemon .popup-card .info {
         width: 100%;
         height: auto;
         padding: 20px;
@@ -365,37 +360,37 @@ section#cards h2{
         border-top-left-radius: 0;
     }
 
-    .product .popup-card .info h2{
+    .pokemon .popup-card .info h2{
         margin: 20px 5px 5px 5px;
         font-size: 25px;
     }
 
-    .product .popup-card .info h2 span{
+    .pokemon .popup-card .info h2 span{
         font-size: 10px;
     }
 
-    .product .popup-card .info p{
+    .pokemon .popup-card .info p{
         margin: 5px;
         font-size: 13px;
     }
 
-    .product .popup-card .info .price{
+    .pokemon .popup-card .info .tipo{
         margin: 5px;
         font-size: 30px;
     }
 
-    .product .popup-card .info .add-cart-btn{
+    .pokemon .popup-card .info .add-cart-btn{
         margin: 5px auto;
         padding: 5px 40px;
         font-size: 14px;
     }
 
-    .product .popup-card .info .add-wish{
+    .pokemon .popup-card .info .add-wish{
         font-size: 14px;
 
     }
 
-    .product .popup-card .close-btn{
+    .pokemon .popup-card .close-btn{
         z-index: 4;
 
     }
